tests/invalid/annotation_forward_ref_string_existing_non_type/main.py
def run_case() -> None:
    t: int = 1
    bad: "t" = 1


if __name__ == "__main__":
    run_case()
